feat(): update readme, add meta tags and main container

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "NextJs wrappers react and its main purpose is to make page to render on server\r and send ready html file. This way of creation apps are used because SPA have problems \r with SEO optimization(**Search Engine Optimization**). But now google and yandex claim that\r they fixed this problem and search robots can index SPA correctly.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
